# orchstep

./: .cmenvrc.yaml  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  install.sh  test-results.json
.github/: labeler.yml
.github/workflows/: demo-orchstep-multi.yml  demo-orchstep-parallel.yml  demo-orchstep-sequential.yml  label-pr.yml  publish-packages.yml  validate.yml
action/: README.md  action.yml
demos/01-post-deploy-smoke-test/: README.md  orchstep.yml
demos/02-release-notes-generator/: README.md  orchstep.yml
demos/03-secret-rotation/: README.md  orchstep.yml
demos/04-multi-repo-version-bump/: README.md  orchstep.yml
demos/05-incident-response-runbook/: README.md  orchstep.yml
demos/06-infra-drift-detection/: README.md  orchstep.yml
demos/07-developer-onboarding/: README.md  orchstep.yml
demos/08-flaky-test-triage/: README.md  orchstep.yml
docker/: Dockerfile  README.md
docs/: getting-started.md  installation.md  license-terms-draft.md  payment-integration-spec.md  pricing.md  publishing-packages.md  showcases-and-examples-v0.3.0.md  website-spec.md
examples/: README.md  VERIFICATION.md
homebrew/: orchstep.rb
mcp/: README.md
modules/: registry.json
npm/: README.md  install.js  package.json  publish.sh
pip/: README.md  publish.sh  pyproject.toml
pip/orchstep/: __init__.py  cli.py
pip/orchstep.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
showcases/: README.md
skills/: README.md
spec/: README.md  control-flow.md  error-handling.md  shell-execution.md  templates.md  variables.md
(+336 files in other folders)
